[project]
name = "ixia-mcp"
version = "0.1.0"
description = "MCP server for Keysight IxNetwork - enables AI agents to interact with IXIA network testing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "ixnetwork-restpy",
    "pydantic>=2.0",
]

[project.scripts]
ixia-mcp = "ixia_mcp.server:main"
