[project]
name = "ixia-mcp"
version = "0.1.0"
description = "MCP server for Keysight IxNetwork - enables AI agents to interact with IXIA network testing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "ixnetwork-restpy",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ixia-mcp = "ixia_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
